fix scrollbar

--- a/assets/layout/_responsive.scss
+++ b/assets/layout/_responsive.scss
@@ -77,7 +77,7 @@
   .layout-wrapper {
     .layout-main-container {
       margin-left: 0;
-      padding-left: 2rem;
+      padding: 5rem 1rem 0 1rem;
       width: 100vw !important;
     }
 
